# Delta

./: .gitignore  CMakeLists.txt  main.cpp
Engine/: CMakeLists.txt  Engine.cpp  Engine.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  IDrawable.h  Shader.cpp  Shader.h  VBO.h
Engine/Exceptions/: EngineException.cpp  EngineException.h
Engine/Primitives/: Cube.cpp  Cube.h
Engine/Shaders/: default.frag  default.vert
